--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,24 @@ spring:
     port: 5672
     username: guest
     password: guest
+    template:
+      # 使用return-claaback 时必须设置mandatory 为 true
+      mandatory: true
+    # 消息发送到交换机确认机制， 是否确认回调
+    publisher-confirms: true
+    # 消息发送到交换机确认机制， 是否返回回调
+    publisher-returns: true
+    listener:
+      simple:
+        # 并发消费者初始化值
+        concurrency: 5
+        # 最大值
+        max-concurrency: 10
+        # 买个消费者每次监听时可拉取处理的消息数量
+        prefetch: 20
+        # 确认模式设置为手动签收
+        acknowledge-mode: manual
+  application:
+    name: rabbit-confirm
+server:
+  port: 8080
